# pyproject.toml

[build-system]
requires      = ["setuptools>=45.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | \.ipynb_checkpoints
  | _build
  | buck-out
  | build
  | dist
)/
'''