[metadata]
name = velovae
version = 0.1.1
author = Yichen Gu
author_email = gyichen@umich.edu
description = Bayesian Inference of RNA Velocity
long_description = file: README.rst
url = https://github.com/welch-lab/VeloVAE
keywords =
    RNA velocity
    single-cell RNA
    variational autoencoder
    deep generative Model
    bayesian inference
    ordinary differential equation
license = BSD 3-Clause License
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Bio-Informatics
    Topic :: Scientific/Engineering :: Visualization

[options]
package_dir = 
    = velovae
package = find:
install_requires  = 
    torch>=1.8.0
    anndata>=0.8.0
    scanpy>=1.5
    scvelo>=0.2.3
    umap-learn>=0.3.10
    numba>=0.41.0
    numpy>=1.17
    scipy>=1.4.1
    pandas>=0.23
    matplotlib>=3.3.0
    loess>=2.1.2
    scikit-learn>=0.23.0
    tqdm<=4.62.3

requires_python = ">=3.6"

[options.packages.find]
where = velovae
exclude =
    docs
    notebooks
    Rscript
    tests
    others
    go
